[package]
name = "rar-access"
version = "0.2.0"
edition = "2021"
description = "Streaming and seekable access to files inside RAR archives (v4 and v5), with HTTP source support"
license = "MIT OR Apache-2.0"
keywords = ["rar", "archive", "streaming", "seek", "http"]
categories = ["compression", "filesystem", "web-programming"]

[dependencies]
# RAR parsing and decompression backend
rar-stream = { git = "https://github.com/doom-fish/rar-stream", features = ["async", "crypto"] }

# Async runtime (needed to bridge rar-stream's async API to sync Read+Seek)
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "io-util", "sync", "macros"] }

# HTTP range requests for remote archives
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Error handling
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
